# Banking-Statement-Transactions-using-NLP

./: .dockerignore  .env.example  .gitignore  .koyebignore  .pre-commit-config.yaml  Dockerfile  PROJECT_STATE.json  README.md  alembic.ini  app.py  gunicorn.conf.py  pyproject.toml  render.yaml  requirements-ml.txt  requirements.txt
.cursor/rules/: project.mdc
config/: __init__.py  category_map.yaml  column_synonyms.yaml  merchant_rules.yaml  settings.py  yaml_loader.py
deploy/: huggingface-spaces.md  koyeb-init.sh  push-to-hf-space.ps1
migrations/: env.py
migrations/versions/: b8a8d5a5709b_initial_schema.py
src/finunderwrite/: __init__.py  cli.py  logging.py
src/finunderwrite/api/: __init__.py  app.py  middleware.py  pipeline.py  process_upload.py  schemas.py
src/finunderwrite/api/routers/: features.py  health.py  profile.py  statements.py  synthetic.py  transactions.py
src/finunderwrite/behaviour/: __init__.py  recurring.py  summary.py
src/finunderwrite/contracts/: __init__.py  profile.py  transaction.py
src/finunderwrite/features/: __init__.py  vectorizer.py
src/finunderwrite/inventory/: __init__.py  profiler.py
src/finunderwrite/merchant/: __init__.py  categorize.py  enrich.py  extract.py
src/finunderwrite/normalize/: __init__.py  normalizer.py
src/finunderwrite/parser/: __init__.py  base.py  pdf_native.py  pdf_scanned.py  tabular.py
src/finunderwrite/parser/ocr/: __init__.py  table_reconstruction.py  tesseract_wrapper.py
src/finunderwrite/persistence/: __init__.py  analytics.py  database.py  models.py  repository.py
src/finunderwrite/profile/: __init__.py  builder.py
src/finunderwrite/schema_detection/: __init__.py  mapper.py
src/finunderwrite/static/: app.js  index.html  styles.css
src/finunderwrite/synthetic/: __init__.py  generate.py
tests/: conftest.py
tests/fixtures/: canara_style.csv  sbi_style.csv  signed_amount.csv
tests/helpers/: pdf_writer.py  synthetic_txns.py
tests/integration/: __init__.py
tests/unit/: test_analytics.py  test_api.py  test_behaviour.py  test_cli.py  test_config_yaml.py  test_contracts.py  test_features.py  test_inventory.py  test_merchant_categorize.py  test_merchant_enrich.py  test_merchant_extract.py  test_normalizer.py  test_parser_pdf_native.py  test_parser_tabular.py  test_profile.py  test_recurring.py  test_schema_detection.py  test_synthetic.py  test_yaml_loader.py
